postgresql fixes